Messages and Users stored

--- a/CommunityInformation/CommunityInformation/appsettings.json
+++ b/CommunityInformation/CommunityInformation/appsettings.json
@@ -1,8 +1,7 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Data": {
+        "ComInfo": {
+            "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=ComInfoSite;Trusted_Connection=True;MultipleActiveResultSets=true"
+        }
     }
-  },
-  "AllowedHosts": "*"
 }
