--- a/CommunityInformation/CommunityInformation/appsettings.json
+++ b/CommunityInformation/CommunityInformation/appsettings.json
@@ -1,7 +1,5 @@
 {
-    "Data": {
-        "ComInfo": {
-            "ConnectionString": "Data Source=cominfo.database.windows.net;Initial Catalog=cominfo;User ID=cs295n;Password=!h8azure;Connect Timeout=60;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-        }
+    "ConnectionStrings": {
+        "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=ComInfoSite;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
 }
